--- a/src/main/resources/com/example/project_ver1/order-view.fxml
+++ b/src/main/resources/com/example/project_ver1/order-view.fxml
@@ -2,203 +2,30 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="712.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.OrderController">
+<AnchorPane prefHeight="712.0" prefWidth="1155.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project_ver1.controller.SellController">
    <children>
-      <Pane layoutY="1.0" prefHeight="50.0" prefWidth="1155.0" style="-fx-background-color: #002d40;" />
-      <Button fx:id="back" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" text="back" />
-      <GridPane layoutX="27.0" layoutY="72.0" prefHeight="344.0" prefWidth="682.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="60.79999999999999" minHeight="10.0" prefHeight="60.79999999999999" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Pane layoutY="58.0" prefHeight="653.0" prefWidth="306.0" style="-fx-background-color: #9697e9;">
          <children>
-            <HBox alignment="CENTER" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0">
-               <children>
-                  <Label text="Heineken" />
-               </children></HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Budweiser" />
-               </children></HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Sài Gòn Xưa" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Bia 333" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="183.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Bia Tiger" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="241.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Sư tử trắng" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1">
-               <children>
-                  <Label text="Sangria" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="124.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <children>
-                  <Label text="Pina Colada" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <children>
-                  <Label text="Pisco Sour" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Margarita" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Mojito" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Pimm's" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2">
-               <children>
-                  <Label text="Whisky" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <children>
-                  <Label text="Brandy" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <children>
-                  <Label text="Gin" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Vodka" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Chivas" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Rum" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="238.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3">
-               <children>
-                  <Label text="Whisky" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <children>
-                  <Label text="Heineken" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
-               <children>
-                  <Label text="Heineken" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Heineken" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Heineken" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Heineken" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="56.0" prefWidth="125.0" spacing="5.0" GridPane.columnIndex="4">
-               <children>
-                  <Label text="Diry Martini" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="4" GridPane.rowIndex="1">
-               <children>
-                  <Label text="Blood Maria" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="4" GridPane.rowIndex="2">
-               <children>
-                  <Label text="Tequira Sunris" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="4" GridPane.rowIndex="3">
-               <children>
-                  <Label text="Bule Hawaii" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="4" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Zomebie" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="58.0" prefWidth="128.0" spacing="5.0" GridPane.columnIndex="4" GridPane.rowIndex="5">
-               <children>
-                  <Label text="Pina" />
-               </children>
-            </HBox>
-         </children>
-      </GridPane>
-      <Pane layoutX="719.0" layoutY="40.0" prefHeight="664.0" prefWidth="436.0" style="-fx-background-color: #9697e9;">
-         <children>
-            <Label layoutX="59.0" layoutY="34.0" text="Thông Tin Hóa Đơn Order">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <TextField layoutX="107.0" layoutY="130.0" prefHeight="25.0" prefWidth="138.0" text="Tên SP" />
-            <TextField layoutX="14.0" layoutY="130.0" prefHeight="26.0" prefWidth="75.0" text="SL" />
-            <TextField layoutX="352.0" layoutY="131.0" prefHeight="25.0" prefWidth="75.0" text="Đơn giá" />
-            <TextField layoutX="13.0" layoutY="173.0" prefHeight="26.0" prefWidth="75.0" />
-            <TextField layoutX="107.0" layoutY="174.0" prefHeight="25.0" prefWidth="138.0" />
-            <TextField layoutX="259.0" layoutY="174.0" prefHeight="25.0" prefWidth="82.0" />
-            <TextField layoutX="13.0" layoutY="244.0" prefHeight="25.0" prefWidth="93.0" text="Tổng Số lượng" />
-            <Button layoutX="154.0" layoutY="402.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="128.0" text="Hoàn thành " />
-            <Button layoutX="127.0" layoutY="479.0" mnemonicParsing="false" text="Xuất Hóa Đơn">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Button>
-            <TextField layoutX="262.0" layoutY="131.0" prefHeight="25.0" prefWidth="75.0" text="Size" />
-            <TextField layoutX="352.0" layoutY="174.0" prefHeight="25.0" prefWidth="75.0" text="Đơn giá" />
-            <TextField layoutX="355.0" layoutY="244.0" prefHeight="25.0" prefWidth="75.0" text="Tổng tiền" />
+            <TextField layoutX="37.0" layoutY="25.0" prefHeight="25.0" prefWidth="179.0" promptText="Tìm kiếm hóa đơn" />
+            <Button layoutX="126.0" layoutY="71.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Tìm kiếm" />
+            <Separator layoutX="4.0" layoutY="131.0" prefHeight="5.0" prefWidth="298.0" />
+            <Button layoutX="126.0" layoutY="106.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Xóa" />
          </children></Pane>
+      <Pane prefHeight="58.0" prefWidth="1155.0" style="-fx-background-color: #002d40;">
+         <children>
+            <Button fx:id="back" layoutX="15.0" layoutY="16.0" mnemonicParsing="false" text="Back" />
+         </children></Pane>
+      <TableView layoutX="306.0" layoutY="59.0" prefHeight="200.0" prefWidth="757.0">
+         <columns>
+            <TableColumn prefWidth="75.0" text="ID Hóa Đơn " />
+            <TableColumn prefWidth="113.20001220703125" text="Ngày Lập" />
+            <TableColumn prefWidth="104.39999389648438" text="Mã sản phẩm" />
+            <TableColumn prefWidth="145.79998779296875" text="Tên sản phẩm" />
+            <TableColumn prefWidth="108.0" text="Số Lượng" />
+            <TableColumn prefWidth="104.0" text="Đơn giá" />
+            <TableColumn prefWidth="100.60003662109375" text="Tổng Tiền" />
+         </columns>
+      </TableView>
    </children>
 </AnchorPane>
