--- a/src/main/resources/com/example/project_ver1/employ-view.fxml
+++ b/src/main/resources/com/example/project_ver1/employ-view.fxml
@@ -68,21 +68,15 @@
                               </TextField>
                            </children>
                         </HBox>
-                         <TextField fx:id="field_role" prefWidth="311.0" promptText="Vai trò">
-                             <VBox.margin>
-                                 <Insets />
-                             </VBox.margin>
-                             <padding>
-                                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                             </padding></TextField>
+                         <ComboBox fx:id="cbRole" maxWidth="1.7976931348623157E308" />
                         <HBox prefWidth="200.0" spacing="10.0">
                            <children>
-                              <Button onAction="#addUser" defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Thêm" HBox.hgrow="ALWAYS" />
-                              <Button layoutX="10.0" onAction="#deleteUser" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Xóa" HBox.hgrow="ALWAYS" />
+                              <Button defaultButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addUser" text="Thêm" HBox.hgrow="ALWAYS" />
+                              <Button layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#deleteUser" text="Xóa" HBox.hgrow="ALWAYS" />
                               <Button layoutX="62.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Sửa" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
-                        <Button onAction="#clearBoxes" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Clear ô text" HBox.hgrow="ALWAYS" />
+                        <Button layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearBoxes" text="Clear ô text" HBox.hgrow="ALWAYS" />
                      </children>
                      <padding>
                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
@@ -91,7 +85,7 @@
                </children></AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TableView onKeyPressed="#keyboardItem" onMouseClicked="#clickItem" fx:id="tableUser" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TableView fx:id="tableUser" onKeyPressed="#keyboardItem" onMouseClicked="#clickItem" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <columns>
                         <TableColumn fx:id="col_id" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="39.0" text="ID" />
                         <TableColumn fx:id="col_name" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="135.0" text="Tên" />
